# os_labs

./: .gitignore  CMakeLists.txt
kp/: CMakeLists.txt  main.cpp
kp/doc/: report.docx
kp/src/: client.cpp
os_lab_1/doc/: report.docx
os_lab_1/src/: CMakeLists.txt  main.c
os_lab_2/doc/: report.docx
os_lab_2/src/: CMakeLists.txt  main.c
os_lab_2/test/: test1.txt  test2.txt  test4.txt  test5.txt
os_lab_3/doc/: report.docx
os_lab_3/src/: CMakeLists.txt  child1.c  child2.c  main.c
os_lab_3/test/: test01.txt  test04.txt
os_lab_4/doc/: report.docx
os_lab_4/src/linking/: mathfirst.c  mathfirst.h  program1  program1.c
os_lab_4/src/runtime/: mathsecond.c  mathsecond.h  program2  program2.c
os_lab_5_7/: CMakeLists.txt
os_lab_5_7/doc/: report 2.docx
os_lab_5_7/src/: client.cpp  main.cpp
os_lab_8/doc/: report.docx  ~$report.docx
